<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">正在加载中…</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="no_url">播放地址无效</string>
    <string name="replay">Replay</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="video_loading_failed">Video loading failed</string>
    <string name="srl_component_falsify" formatted="false">"%s falsify area,
 Represents the height[%.1fdp] of drag at run time,
 It does not show anything."</string>
    <string name="srl_content_empty">The content view in SmartRefreshLayout is empty. Do you forget to add it in xml layout file?</string>
    <string name="text_empty">No data!</string>
    <string name="text_retry">"Something went wrong!

Tap to retry"</string>
    <string name="TA_user_info">的个人主页</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_me">联系我们</string>
    <string name="action_settings">Settings</string>
    <string name="actor_with_suffix">主演:%1$s</string>
    <string name="add_black_list">加入黑名单</string>
    <string name="add_tag">Add Tag</string>
    <string name="affirm">确定</string>
    <string name="afresh_pay">重新支付</string>
    <string name="album_rules">允许南瓜电影访问相册权限</string>
    <string name="album_rules_msg">查看详细访问相册功能使用规则</string>
    <string name="album_rules_title">相册信息</string>
    <string name="alipay_failed">支付宝支付失败，请重试！</string>
    <string name="all_choice">全选</string>
    <string name="all_pause_download">全部暂停</string>
    <string name="all_start_download">全部开始</string>
    <string name="all_tip">全部</string>
    <string name="already_follow">已关注</string>
    <string name="already_like_comment">您已点过赞！</string>
    <string name="already_look">已看</string>
    <string name="already_saw_people">%1$s次</string>
    <string name="already_saw_people_wan">%1$s万次</string>
    <string name="already_saw_people_yi">%1$s亿次</string>
    <string name="already_submit">已告知南瓜君该影片，感谢反馈</string>
    <string name="and">和</string>
    <string name="appName">南瓜电影</string>
    <string name="app_check_failed">未安装此客户端</string>
    <string name="app_name">南瓜电影</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appdownloading">正在下载</string>
    <string name="ask_go_to_cache">是否前往观看缓存文件?</string>
    <string name="attention_fail">关注失败</string>
    <string name="attention_success">关注成功</string>
    <string name="available_memory">剩余%1$s可用</string>
    <string name="background_update">正在为您启动后台下载…</string>
    <string name="base_definition">标清</string>
    <string name="birthday_reminder">请选择您的生日</string>
    <string name="black_list">黑名单</string>
    <string name="block_canary_block_list_title">Blocks in %s</string>
    <string name="block_canary_class_has_blocked">blocked %s ms</string>
    <string name="block_canary_delete">Delete</string>
    <string name="block_canary_delete_all">Delete all</string>
    <string name="block_canary_delete_all_dialog_content">Are you sure to delete all records?</string>
    <string name="block_canary_display_activity_label">Blocks</string>
    <string name="block_canary_no">No</string>
    <string name="block_canary_notification_message">Click for more details</string>
    <string name="block_canary_share_leak">Share info</string>
    <string name="cinema_email">hello@vcinema.cn</string>
    <string name="copyright" />
    <string name="custom_service_email">客服邮件</string>
    <string name="custom_service_phone">客服电话</string>
    <string name="customerservice_phone">客服热线：</string>
    <string name="customerservice_phone_number">4006996228</string>
    <string name="customerservice_qq">客服QQ：</string>
    <string name="customerservice_qq_number">3467526807</string>
    <string name="customerservice_weixin">微信公众号：</string>
    <string name="customerservice_weixin_number">南瓜电影</string>
    <string name="grade">IMDb评分</string>
    <string name="nangua">\@南瓜电影</string>
    <string name="newest">最新上线</string>
    <string name="overseas_reminder1">对不起，您所在的区域南瓜电影暂时未提供服务</string>
    <string name="overseas_reminder2">为保障您的权益，可随时联系客服退费</string>
    <string name="overseas_service_email">客服邮件：</string>
    <string name="overseas_service_tencent">客服QQ：</string>
    <string name="overseas_service_wechat">微信公众号：</string>
    <string name="popular">流行热度</string>
    <string name="private_policy">隐私保护指引</string>
    <string name="pumpkinmovie">南瓜电影</string>
    <string name="qq_tencent">3467526807</string>
    <string name="report_content_five">诈骗</string>
    <string name="report_content_four">广告骚扰</string>
    <string name="report_content_one">色情低俗</string>
    <string name="report_content_six">其他问题</string>
    <string name="report_content_three">违法有害</string>
    <string name="report_content_two">政治敏感</string>
    <string name="report_edit_tip">为帮助审核人员快速处理，请补充问题类型和详细位置</string>
    <string name="report_title">举报</string>
    <string name="service_phone">400 699 6228</string>
    <string name="service_term">服务条款</string>
    <string name="sharpness_blue_light_1080P">超清(1080P)</string>
    <string name="sharpness_fluency_480">标清(480P)</string>
    <string name="sharpness_gqdy_720">高清(720P)</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="title_report_tip">你确定要举报%1$s吗？</string>
    <string name="vcinema_wechat_acccount">南瓜电影</string>
    <string name="vcinema_weixin">微信客服</string>
    <string name="video_repair_fail">"南瓜君自动修复失败了 555～～
请反馈给客服人员"</string>
    <string name="video_repair_userid">您的登录账号：</string>
    <string name="weixin_group">微信公众号</string>
</resources>