<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/main_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/top_bar" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_28" android:layout_marginTop="@dimen/base_dimen_40" android:text="@string/title_report_tip" />
            <RadioGroup android:orientation="vertical" android:id="@id/layout_report_rg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_28" android:layout_marginTop="@dimen/base_dimen_48">
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_one" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_one" />
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_two" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_48" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_two" />
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_three" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_48" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_three" />
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_four" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_48" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_four" />
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_five" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_48" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_five" />
                <RadioButton android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:id="@id/report_content_six" android:paddingLeft="@dimen/base_dimen_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_48" android:button="@drawable/selector_report_checkbox_style" android:text="@string/report_content_six" />
            </RadioGroup>
            <TextView android:textSize="@dimen/text_13" android:textColor="@color/color_efefef" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_28" android:layout_marginTop="@dimen/base_dimen_64" android:text="@string/report_edit_tip" />
            <EditText android:textSize="@dimen/text_15" android:textColor="@color/color_9f9f9f" android:gravity="left" android:id="@id/report_edit_content" android:background="@color/color_222222" android:padding="@dimen/base_dimen_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_28" android:layout_marginTop="@dimen/base_dimen_32" android:layout_marginRight="@dimen/base_dimen_28" android:minHeight="@dimen/base_dimen_320" android:textCursorDrawable="@drawable/color_cursor" />
            <TextView android:textSize="@dimen/text_15" android:textColor="@color/color_efefef" android:gravity="center" android:id="@id/report_btn" android:background="@color/color_f42c2c" android:layout_width="fill_parent" android:layout_height="@dimen/base_dimen_88" android:layout_marginLeft="@dimen/base_dimen_28" android:layout_marginTop="@dimen/base_dimen_24" android:layout_marginRight="@dimen/base_dimen_28" android:text="@string/report_title" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>