<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout_video_repair_fail" android:background="@drawable/play_diagnosis_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/repair_fail_left_arrow" android:paddingLeft="@dimen/base_dimen_40" android:paddingTop="@dimen/base_dimen_40" android:paddingRight="@dimen/base_dimen_40" android:paddingBottom="@dimen/base_dimen_40" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/back_btn_selector" />
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="@dimen/base_dimen_88" android:layout_height="@dimen/base_dimen_88" android:layout_marginTop="@dimen/base_dimen_80" android:src="@drawable/repair_fail" android:scaleType="fitXY" />
    <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_23" android:text="@string/video_repair_fail" android:lineSpacingExtra="@dimen/base_dimen_28" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_28">
        <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_repair_userid" />
        <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:id="@id/repair_user_id" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_dimen_136">
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerservice_qq" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:id="@id/txt_customerservice_qq" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerservice_qq_number" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_70" android:text="@string/customerservice_weixin" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:id="@id/txt_customerservice_weixin" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerservice_weixin_number" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/base_dimen_70" android:text="@string/customerservice_phone" />
        <TextView android:textSize="@dimen/text_12" android:textColor="@color/color_9f9f9f" android:gravity="center" android:id="@id/txt_customerservice_phone" android:paddingTop="@dimen/base_dimen_10" android:paddingBottom="@dimen/base_dimen_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerservice_phone_number" />
    </LinearLayout>
</LinearLayout>