<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#e1000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:id="@id/txt_blue_light" android:padding="@dimen/space_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sharpness_blue_light_1080P" />
    <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:id="@id/txt_gqdy" android:padding="@dimen/space_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sharpness_gqdy_720" />
    <TextView android:textSize="@dimen/text_14" android:textColor="@color/color_efefef" android:gravity="center" android:id="@id/txt_fluency" android:padding="@dimen/space_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sharpness_fluency_480" />
</LinearLayout>